--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,6 +16,7 @@
         <div class="logo">thinkthingsover</div>
         <div class="menu">more</div>
       </div>
+
       <div class="container">
         <div class="content">
           <div class="content-top">
@@ -44,10 +45,11 @@
           </div>
           <div class="content-bottom">
             <div class="description" id="description">
-                언제든 기분에 맞는 완벽한 커피 한 잔과 따스한 에너지를 전하는 곳,<br />all
-                day mood에서 기분 좋은 여유와 잔잔한 행복을 느껴보세요.<br />하루의
-                시작부터 끝까지, 좋은 하루를 위한 모든 순간을 함께합니다.
-              </div>
+              언제든 기분에 맞는 완벽한 커피 한 잔과 따스한 에너지를 전하는
+              곳,all day mood에서 기분 좋은 여유와 잔잔한 행복을
+              느껴보세요.하루의 시작부터 끝까지, 좋은 하루를 위한 모든 순간을
+              함께합니다.
+            </div>
           </div>
         </div>
         <div class="image">
