--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
     <!--메인-->
     <div class="container-box">
       <div class="header">
-        <div class="logo">thinkthingsover</div>
+        <div class="logo"><img src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/tto_logo2.svg" alt=""></div>
         <div class="menu">more</div>
       </div>
       <div class="container">
@@ -38,8 +38,8 @@
               <div class="number" id="number">01</div>
             </div>
             <div class="content-top_2 view">
-              <a href="#" target="_blank">view</a>
-              <a id="view-button" href="" target="_blank"> →→→</a>
+              <a href="port1.html">view</a>
+              <a id="view-button" href="port1.html" > →→→</a>
             </div>
           </div>
           <div class="content-bottom">
