--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,13 @@
     <!--메인-->
     <div class="container-box">
       <div class="header">
-        <div class="logo"><img src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/tto_logo2.svg" alt=""></div>
+        <div class="logo">
+          <a href="index.html"
+            ><img
+              src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/tto_logo2.svg"
+              alt=""
+          /></a>
+        </div>
         <div class="menu">more</div>
       </div>
 
@@ -23,42 +29,47 @@
             <div class="content-top_1">
               <div class="titles">
                 <div class="title active" data-index="1">
-                  <span>No.1</span>
+                  <span>Web Create :</span>
                   <span>카페 홈페이지 [올 데이 무드]</span>
                 </div>
                 <div class="title" data-index="2">
-                  <span>No.2</span> <span>환경보호단체 [그린피스]</span>
+                  <span>Web Renewal :</span>
+                  <span>환경보호단체 [그린피스]</span>
                 </div>
                 <div class="title" data-index="3">
-                  <span>No.3</span> <span>가챠샵 서비스 [오늘 가챠]</span>
+                  <span>UXUI Project</span>
+                  <span>가챠샵 서비스 [오늘 가챠]</span>
                 </div>
                 <div class="title" data-index="4">
-                  <span>No.4</span> <span>로고 모음집</span>
+                  <span>No.4</span> <span>로고 프로젝트 모음</span>
                 </div>
               </div>
               <div class="number" id="number">01</div>
             </div>
-            <div class="content-top_2 view">
-              <a href="port1.html">view</a>
-              <a id="view-button" href="port1.html" > →→→</a>
+            <div class="content-top_2">
+              <div class="image">
+                <img
+                  id="image"
+                  src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/pf_cafe_r.jpg"
+                  alt=""
+                />
+
+                <div class="image_line"></div>
+              </div>
+              <div class="description" id="description">
+                언제든 기분에 맞는 완벽한 커피 한 잔과 따스한 에너지를 전하는
+                곳,all day mood에서 기분 좋은 여유와 잔잔한 행복을
+                느껴보세요.하루의 시작부터 끝까지, 좋은 하루를 위한 모든 순간을
+                함께합니다.
+              </div>
             </div>
           </div>
           <div class="content-bottom">
-            <div class="description" id="description">
-              언제든 기분에 맞는 완벽한 커피 한 잔과 따스한 에너지를 전하는
-              곳,all day mood에서 기분 좋은 여유와 잔잔한 행복을
-              느껴보세요.하루의 시작부터 끝까지, 좋은 하루를 위한 모든 순간을
-              함께합니다.
+            <div class="view">
+              <a href="port1.html">view</a>
+              <a id="view-button" href="port1.html"> →→→</a>
             </div>
           </div>
-        </div>
-        <div class="image">
-          <div class="image_line"></div>
-          <img
-            id="image"
-            src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/pf_cafe.jpg"
-            alt=""
-          />
         </div>
       </div>
     </div>
