--- a/portfolio/port1.html
+++ b/portfolio/port1.html
@@ -10,16 +10,24 @@
 
   <body>
     <div class="container">
-        <div class="header">
-            <div class="logo"><img src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/tto_logo2.svg" alt=""></div>
-            <div class="menu">more</div>
-          </div>
-        <div class="title">
-            <a href="index.html">←Back</a>
-            <span>all day mood</span>
+      <div class="header">
+        <div class="logo">
+          <a href="index.html"
+            ><img
+              src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/tto_logo2.svg"
+              alt=""
+          /></a>
         </div>
-        <img src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/pf1.jpg" alt="">
+        <div class="menu">more</div>
+      </div>
+      <div class="title">
+        <a href="index.html">←Back</a>
+        <span>all day mood</span>
+      </div>
+      <img class="pf_img"
+        src="https://cdn.jsdelivr.net/gh/jang-daun/portfolio/pf1.jpg"
+        alt=""
+      />
     </div>
   </body>
-
-  </html>
+</html>
